<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:background="@drawable/view_circle"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:translationZ="2dp" />

    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/wld_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:wlv_shapeType="rectangle"
        app:wlv_waveColor="@color/colorTheme" />

    <TextView
        android:id="@+id/txv_saver_time"
        tools:text="@string/txv_time_eg"
        android:textSize="28sp"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:translationZ="2dp" />

    <LinearLayout
        android:id="@+id/layout_btn"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:elevation="2dp"
        android:translationZ="2dp">

        <Button
            android:id="@+id/btn_saver_pause"
            android:text="@string/btn_pause"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:background="@color/colorDarkTheme"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1" />

        <View
            android:background="@color/colorTrans"
            android:layout_width="2dp"
            android:layout_height="54dp"
            />

        <Button
            android:id="@+id/btn_saver_end"
            android:text="@string/btn_end"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:background="@color/colorDarkTheme"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_enter"
        android:visibility="gone"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:text="@string/btn_enter"
        android:background="@color/colorDarkTheme"
        android:layout_marginLeft="270dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="440dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/bg_view"
        android:visibility="gone"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
