<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#666666"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/btn_picker_ahead"
        android:background="@drawable/round_button"
        android:src="@drawable/ic_pencil"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="338dp"
        android:background="@color/colorTheme"
        android:layout_marginTop="44dp"
        android:id="@+id/view2" />


    <com.joinme.widget.widget.timePickView.TimePickerView
        android:id="@+id/np_study_time"
        android:layout_width="271dp"
        android:layout_height="180dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true">
    </com.joinme.widget.widget.timePickView.TimePickerView>

    <EditText
        android:id="@+id/edt_name"
        android:lines="1"
        android:hint="@string/edt_edit"
        android:gravity="center"
        android:textColorHint="@color/colorWhite"
        android:background="@drawable/bg_empty_rec"
        android:textColor="@color/colorWhite"
        android:layout_width="271dp"
        android:layout_height="36dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_picker_ahead"
        android:layout_marginTop="4dp"/>

    <LinearLayout
        android:layout_width="271dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:background="@color/colorTheme"
        android:layout_alignBottom="@+id/view2"
        android:layout_marginBottom="31dp"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkTheme"
            android:layout_width="24dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            />
        <View
            android:layout_width="30dp"
            android:layout_height="40dp"/>
        <Button
            android:id="@+id/btn_enter"
            android:text="@string/btn_enter"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkTheme"
            android:layout_width="24dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical|center"
            />
    </LinearLayout>



</RelativeLayout>